# property-management

./: .dockerignore  .gitignore  .lsp.json  CLAUDE.md  README.md  VERSION  docker-compose.dev.yml  docker-compose.synology.yml  docker-compose.yml  justfile  package.json
backend/: CLAUDE.md  Cargo.toml
backend/.autopilot/: state.json
backend/.cargo/: config.toml
backend/crates/: CLAUDE.md
backend/crates/api-core/: Cargo.toml
backend/crates/api-core/src/: lib.rs  openapi.rs
backend/crates/api-core/src/extractors/: auth.rs  mod.rs  rls_connection.rs  tenant.rs
backend/crates/api-core/src/middleware/: authorization.rs  feature_guard.rs  mod.rs  rls_context.rs  tenant_filter.rs
backend/crates/common/: Cargo.toml
backend/crates/common/src/: errors.rs  lib.rs  tenant.rs  types.rs
backend/crates/common/src/i18n/: messages.rs  mod.rs  resolver.rs
backend/crates/common/src/notifications/: events.rs  mod.rs
backend/crates/common/src/sitemap/: mod.rs
backend/crates/db/: Cargo.toml
backend/crates/db/migrations/: 00003_create_password_reset_tokens.sql  00004_create_organizations.sql  00006_enable_rls_policies.sql  00007_create_buildings.sql  00009_create_unit_residents.sql  00010_create_delegations.sql  00011_create_person_months.sql  00012_create_facilities.sql  00013_create_faults.sql  00014_create_voting.sql  00015_create_announcements.sql  00016_create_announcement_comments.sql  00017_create_direct_messaging.sql  00018_add_user_privacy_settings.sql  00019_fix_messaging_rls_policies.sql  00020_create_documents.sql  00021_create_notification_preferences.sql  00022_create_critical_notifications.sql  00023_fix_notification_preferences_trigger.sql  00024_create_user_2fa.sql  00025_create_audit_logs.sql  00026_create_data_export_requests.sql  00027_add_scheduled_deletion_to_users.sql  00028_create_oauth_provider.sql  00029_create_platform_admin.sql  00030_create_feature_flags.sql  00031_create_platform_health_monitoring.sql  00032_create_system_announcements.sql  00033_create_user_onboarding.sql  00034_create_contextual_help.sql  00035_add_document_versioning.sql  00036_add_document_templates.sql  00037_create_signature_requests.sql  00038_granular_notification_preferences.sql  00039_create_financial_accounts.sql  00040_create_invoices_payments.sql  00041_create_meters_utilities.sql  00042_create_ai_chat.sql  00043_create_sentiment_analysis.sql  00044_create_predictive_maintenance.sql  (+70 more)
backend/crates/db/src/: lib.rs  rls_pool.rs  tenant_context.rs
backend/crates/db/src/models/: agency.rs  ai_chat.rs  announcement.rs  api_ecosystem.rs  audit_log.rs  automation.rs  board_meetings.rs  budget.rs  building.rs  building_certification.rs  community.rs  competitive.rs  compliance.rs  critical_notification.rs  data_export.rs  data_residency.rs  delegation.rs  disputes.rs  document.rs  document_template.rs  emergency.rs  energy.rs  enhanced_tenant_screening.rs  equipment.rs  esg_reporting.rs  facility.rs  fault.rs  feature_analytics.rs  feature_package.rs  financial.rs  form.rs  government_portal.rs  granular_notification.rs  infrastructure.rs  insurance.rs  integration.rs  investor_portal.rs  lease.rs  lease_abstraction.rs  legal.rs  (+50 more)
backend/crates/db/src/repositories/: agency.rs  ai_chat.rs  announcement.rs  api_ecosystem.rs  audit_log.rs  automation.rs  background_jobs.rs  board_meetings.rs  budget.rs  building.rs  building_certification.rs  community.rs  critical_notification.rs  data_export.rs  delegation.rs  dispute.rs  document.rs  document_template.rs  edd.rs  emergency.rs  energy.rs  enhanced_tenant_screening.rs  equipment.rs  esg_reporting.rs  facility.rs  fault.rs  feature_analytics.rs  feature_flag.rs  feature_package.rs  financial.rs  form.rs  government_portal.rs  granular_notification.rs  health_monitoring.rs  help.rs  infrastructure.rs  insurance.rs  integration.rs  investor_portal.rs  lease.rs  (+49 more)
backend/crates/db/src/seed/: data.rs  factories.rs  mod.rs  runner.rs
backend/crates/db/tests/: announcement_tests.rs  portfolio_performance_test.rs  repository_tests.rs  rls_penetration_tests.rs  rls_smoke_tests.rs
backend/crates/integrations/: Cargo.toml
backend/crates/integrations/src/: accounting.rs  airbnb.rs  booking.rs  calendar.rs  connector.rs  crypto.rs  lib.rs  llm.rs  oauth.rs  portals.rs  prebuilt.rs  redis.rs  storage.rs  voice_oauth.rs  workflow_executor.rs
backend/docs/: RLS_MIGRATION.md  SEEDING.md
backend/scripts/: check-rls-enforcement.sh  init-db.sql
backend/servers/: CLAUDE.md
backend/servers/api-server/: Cargo.toml
backend/servers/api-server/src/: lib.rs  main.rs  observability.rs  state.rs
backend/servers/api-server/src/handlers/: mod.rs
backend/servers/api-server/src/routes/: admin.rs  agencies.rs  ai.rs  aml_dsa.rs  announcements.rs  api_ecosystem.rs  auth.rs  automation.rs  board_meetings.rs  budgets.rs  building_certifications.rs  buildings.rs  community.rs  competitive.rs  compliance.rs  critical_notifications.rs  data_residency.rs  delegations.rs  disputes.rs  documents.rs  emergency.rs  energy.rs  enhanced_tenant_screening.rs  esg_reporting.rs  facilities.rs  faults.rs  feature_packages.rs  features.rs  financial.rs  forms.rs  gdpr.rs  government_portal.rs  granular_notifications.rs  health.rs  help.rs  infrastructure.rs  insurance.rs  integrations.rs  investor_portal.rs  iot.rs  (+45 more)
backend/servers/api-server/src/services/: auth.rs  document_generation.rs  email.rs  feature_service.rs  jwt.rs  mod.rs  notification.rs  oauth.rs  scheduler.rs  syndication.rs  totp.rs  voice_commands.rs  workflow_executor.rs
backend/servers/api-server/tests/common/: mod.rs
backend/servers/api-server/tests/integration/: auth_tests.rs  mod.rs  (+3 more)
backend/servers/auth-server/: Cargo.toml
backend/servers/auth-server/src/: main.rs
backend/servers/integration-server/: Cargo.toml
backend/servers/integration-server/src/: main.rs
backend/servers/property-server/: Cargo.toml
backend/servers/property-server/src/: main.rs
backend/servers/reality-server/: Cargo.toml
backend/servers/reality-server/src/: main.rs  observability.rs  state.rs
(+1088 files in other folders)
