[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/api-core",
    "crates/db",
    "crates/integrations",
    "servers/api-server",
    "servers/reality-server",
]

[workspace.package]
version = "0.2.299"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/hanibalsk/property-management"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenAPI
utoipa = { version = "4.2", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "rust_decimal"] }
rust_decimal = { version = "1.34", features = ["serde", "serde-str"] }
rust_decimal_macros = "1.34"

# Auth
jsonwebtoken = "9.2"
argon2 = "0.5"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.14"
dotenvy = "0.15"
rand = "0.8"
hex = "0.4"

# Crypto
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"

# URL encoding
urlencoding = "2.1"

# HTTP client (for integrations)
reqwest = { version = "0.11", features = ["json"] }

# Observability (Epic 95)
opentelemetry = { version = "0.21", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }
tracing-opentelemetry = "0.22"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Error tracking (Epic 95)
sentry = { version = "0.32", features = ["tracing", "tower", "tower-http"] }

# AWS SDK for S3 (Epic 103)
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.17"
aws-credential-types = "1.1"

# Redis (Epic 103)
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# CLI (Epic 110)
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"

# i18n (Epic 111)
fluent = "0.16"
fluent-bundle = "0.15"
fluent-syntax = "0.11"
unic-langid = "0.9"
intl-memoizer = "0.5"

# Internal crates
common = { path = "crates/common" }
api-core = { path = "crates/api-core" }
db = { path = "crates/db" }
integrations = { path = "crates/integrations" }
