[package]
name = "api-core"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
db = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
