[package]
name = "db"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
integrations = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
rust_decimal = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = "0.10"
argon2 = "0.5"
password-hash = "0.5"
url = "2.5"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
