[package]
name = "integrations"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
urlencoding = { workspace = true }
# Encryption for sensitive integration data (tokens, secrets)
aes-gcm = "0.10"
base64 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
