[package]
name = "integrations"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
urlencoding = { workspace = true }
# Encryption for sensitive integration data (tokens, secrets)
aes-gcm = "0.10"
base64 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
# Crypto for API signatures (used by Airbnb/Booking integrations)
hmac = "0.12"
sha2 = "0.10"
# Decimal for financial calculations
rust_decimal = { workspace = true }
