[package]
name = "integrations"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
urlencoding = { workspace = true }
# Encryption for sensitive integration data (tokens, secrets)
aes-gcm = "0.10"
base64 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
# Crypto for API signatures (used by Airbnb/Booking integrations)
hmac = "0.12"
sha2 = "0.10"
# Decimal for financial calculations
rust_decimal = { workspace = true }
# Lightweight regex for variable interpolation
regex-lite = "0.1"
# AWS SDK for S3 (Epic 103)
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-credential-types = { workspace = true }
# Redis (Epic 103)
redis = { workspace = true }
# Async stream utilities
futures-lite = "2.2"
# Async trait for connector actions
async-trait = "0.1"
