[package]
name = "api-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
api-core = { workspace = true }
db = { workspace = true }
integrations = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
validator = { workspace = true }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
thiserror = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
ammonia = "4.0"
totp-rs = { version = "5.6", features = ["gen_secret", "otpauth"] }
base32 = "0.5"
base64 = "0.22"
aes-gcm = "0.10"
subtle = "2.5"
