[package]
name = "auth-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "auth-server"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
api-core = { workspace = true }
db = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
