[package]
name = "integration-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "integration-server"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
api-core = { workspace = true }
db = { workspace = true }
integrations = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
