[package]
name = "reality-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "reality-server"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
api-core = { workspace = true }
db = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
jsonwebtoken = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
validator = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
argon2 = { workspace = true }
sqlx = { workspace = true }

# Observability (Epic 95)
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
sentry = { workspace = true }

# Epic 104: Token hashing for cache
hex = { workspace = true }
